# OptiRide

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROJECT_STRUCTURE.txt  README.md  RELEASE.md  pyproject.toml  requirements.txt
.github/: RELEASE_SETUP.md
.github/workflows/: ci.yml  release.yml
examples/: Auxonne.gpx  CingléVentoux.gpx  sample.gpx
optiride/: __init__.py  bike_library.py  cli.py  env.py  exporter.py  fueling.py  gpxio.py  map_exporter.py  models.py  nutrition.py  optimizer.py  physics.py  weather.py
tests/: __init__.py  conftest.py  test_bike_library.py  test_env.py  test_fueling.py  test_models.py  test_physics.py
